--- a/src/assets/scss/cores/_base.scss
+++ b/src/assets/scss/cores/_base.scss
@@ -21,3 +21,9 @@ a {
 .border {
     border: 1px solid $color-red !important;
 }
+
+@media (min-width: 1600px) {
+    .container {
+        max-width: $max-width;
+    }
+}
