--- a/src/assets/scss/sections/_MainMenuSection.scss
+++ b/src/assets/scss/sections/_MainMenuSection.scss
@@ -1,22 +1,27 @@
 .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding-top: 10px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas: "logo menuicons"
+                         "menulinks menulinks";
     
     .header-logo {
+        grid-area: logo;
         font-weight: $font-weight-bold;
         font-size: $font-size-35;
     }
 
     .header-menu {
-        font-weight: &font-weight-medium;
+        grid-area: menulinks;
+        display: none;
+        font-weight: $font-weight-medium;
+        text-decoration: underline;
+
 
         .header-link {            
             color: $color-dark;
-            margin-right: 15px;
-            margin-left: 15px;
+            margin: 10px;
+            text-align: center;
 
             &:hover {
                 color: $color-red;
@@ -29,9 +34,11 @@
     }
     
     .menu-icons {
+        grid-area: menuicons;
         display: flex;
         justify-content: flex-end;
         align-items: center;
+
 
         .menu-icon {
             background-color: $color-white;
@@ -54,8 +61,37 @@
         }
 
         .active {
-            color: $color-white;
             background-color: $color-red;
         }
+
+        .btn-menu-icon {
+            border: none;
+            
+        }
     }   
+}
+
+@media (min-width: 992px) {
+    .header {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-areas: "logo menulinks menuicons";
+        padding-top: 20px;
+        padding-bottom: 20px;
+
+        .header-menu {
+            text-decoration: none;
+            grid-area: menulinks;
+            display: flex;
+
+        }
+        
+        .menu-icons {
+
+            .btn-menu-icon {
+                display: none;
+                
+            }
+        }
+    }
 }
