--- a/src/assets/scss/sections/_MainMenuSection.scss
+++ b/src/assets/scss/sections/_MainMenuSection.scss
@@ -83,6 +83,8 @@
             text-decoration: none;
             grid-area: menulinks;
             display: flex;
+            align-items: center;
+            justify-content: center;
 
         }
         
