--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -3,7 +3,9 @@
 @import "./cores/variables";
 @import "./cores/colors";
 @import "./cores/base";
+@import "./cores/buttons";
 
 // sections
 @import "./sections/MainMenuSection";
+@import "./sections/ProductGridSection";
 @import "./sections/FooterSection";
