--- a/src/assets/scss/cores/_buttons.scss
+++ b/src/assets/scss/cores/_buttons.scss
@@ -1,5 +1,11 @@
-
-
+.btn-red {
+    background-color: $color-red;
+    color: $color-white;
+    font-size: $font-size-14;
+    width: 100%;
+    height: 60px;
+    border: none;
+}
 
 .btn-box-right,
 .btn-box-left {
