--- a/src/assets/scss/sections/_ProductGridSection.scss
+++ b/src/assets/scss/sections/_ProductGridSection.scss
@@ -1,9 +1,6 @@
 .product-grid {
     margin-top: 25px;
 
-    .container {
-        max-width: 1110px;
-    }
     h3 {
         font-size: $font-size-20;
         font-weight: bold; 
@@ -21,7 +18,12 @@
             background-color: $color-grey-80;
             position: relative;
             overflow: hidden;
-
+            
+            img {
+                width: 100%;
+                height: 210px;
+                object-fit: cover;
+            }
             .card-menu {
                 position: absolute;
                 list-style: none;
@@ -59,6 +61,7 @@
                 height: 60px;
                 top: 150px;
                 transition: 200ms ease-in;
+                left: 0;
 
                 &:hover {
                     background-color: $color-red-hover;
@@ -111,12 +114,30 @@
 
 }
 
-@media (min-width: 1200) {
+@media (min-width: 1200px) {
     .product-grid {
         
         .container {
             max-width: 1110px;
-        }        
-    }
+        }
 
+        .card {
+            .card-img {
+                .card-menu {
+                    left: 100%;
+                }
+                .btn-card {
+                    top: 220px;
+                }
+            }
+            &:hover {
+                .card-menu {
+                    left: 85%;
+                }
+                .btn-card {
+                    top: 150px;
+                }
+            }
+        }
+    }
 }
