--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -7,5 +7,8 @@
 
 // sections
 @import "./sections/MainMenuSection";
+@import "./sections/BreadcrumbSection";
+@import "./sections/MapSection";
+@import "./sections/ContactForm";
 @import "./sections/ProductGridSection";
 @import "./sections/FooterSection";
