--- a/src/assets/scss/cores/_buttons.scss
+++ b/src/assets/scss/cores/_buttons.scss
@@ -5,6 +5,37 @@
     width: 100%;
     height: 60px;
     border: none;
+    position: relative;
+
+    &:hover {
+        background-color: $color-red-hover;
+    }
+}
+
+.btn-dark {
+    background-color: $color-dark;
+    color: $color-white;
+    font-size: $font-size-14;
+    border: none;
+    position: relative;
+
+    &:hover {
+        background-color: $color-dark-hover; 
+    }
+}
+
+.btn-white {
+    background-color: $color-white;
+    color: $color-dark;
+    font-size: $font-size-14;
+    width: 100%;
+    height: 60px;
+    border: none;
+    position: relative;
+
+    &:hover {
+        background-color: $color-grey-70;
+    }
 }
 
 .btn-box-right,
@@ -22,6 +53,26 @@
 .btn-box-right {
     border-right: 2px solid $color-white;
     border-bottom: 2px solid $color-white;
+    right: 10px;
+    bottom: 10px;
+}
+
+
+.btn-box-right-dark,
+.btn-box-left-dark {
+    position: absolute;
+    height: 20px;
+    width: 20px;
+}
+.btn-box-left-dark {
+    border-left: 2px solid $color-dark;
+    border-top: 2px solid $color-dark;
+    left: 10px;
+    top: 10px;
+}
+.btn-box-right-dark {
+    border-right: 2px solid $color-dark;
+    border-bottom: 2px solid $color-dark;
     right: 10px;
     bottom: 10px;
 }
