every section is done

--- a/src/assets/scss/cores/_buttons.scss
+++ b/src/assets/scss/cores/_buttons.scss
@@ -16,6 +16,8 @@
     background-color: $color-dark;
     color: $color-white;
     font-size: $font-size-14;
+    width: 200px;
+    height: 60px;
     border: none;
     position: relative;
 
@@ -28,7 +30,7 @@
     background-color: $color-white;
     color: $color-dark;
     font-size: $font-size-14;
-    width: 100%;
+    width: 200px;
     height: 60px;
     border: none;
     position: relative;
