--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -14,3 +14,6 @@
 @import "./sections/Footer";
 @import "./sections/TopBanner";
 @import "./sections/TopPicks";
+@import "./sections/sale29";
+@import "./sections/sale49";
+@import "./sections/WebpageInfo"
