--- a/src/assets/scss/sections/_sale49.scss
+++ b/src/assets/scss/sections/_sale49.scss
@@ -1,17 +1,40 @@
-.product-grid {
+.sale49 {
     margin-top: 25px;
+    
+    .container {
+        display: flex;
+        justify-content: left;
+        align-items: center;
+    }
 
-    h3 {
-        font-size: $font-size-20;
-        font-weight: bold; 
-        margin-bottom: 20px;
-        text-align: center;
+    
+    .image {
+
+        position: relative;
+        display: none;
+
+        .image-text {
+            position: absolute;
+            left: 100;
+            right: 0; 
+            text-align: center;
+            top: 40%;
+
+            h1 {
+                color: white;
+            }
+
+            button {
+
+            }
+        }
     }
 
     .card {
         border: none;
         margin-left: auto;
         margin-right: auto;
+        
         
         .card-img {
             height: 210px;
@@ -114,13 +137,25 @@
 }
 
 @media (min-width: 1200px) {
-    .product-grid {
-        
+    .sale49 {       
         .container {
             max-width: 1110px;
         }
 
+        .image {
+            display: block;
+            right: -15px;
+            width: 50%;
+            
+            img {
+                width: 815px;
+                height: 746px;
+            }
+        }
+
         .card {
+            margin-top: 25px;
+            margin-right: 15px;
             .card-img {
                 .card-menu {
                     left: 100%;
